fixed the counters vertical alignmnet issue

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -18,7 +18,6 @@
 }
 
 
-
 .btn {
 	display: inline-block;
 	position: fixed;
@@ -33,7 +32,8 @@
 	padding: 0.5vw 1vh;
 	margin: 0.26vw;
 	left: 0.2vw;
-     }
+}
+
      
 #side_list
 {
@@ -65,7 +65,8 @@
     display: inline-block;
     margin-left: 2vh;
     position: relative;
-    top: -4.4vh;
+    top: -10.8vh;
+    left: -3vw;
     
 }
 
@@ -77,11 +78,13 @@
     width: 18vw;
     height: 1.8vh;
     background: #6D8DA5;
-    margin-top: -100px;
+    
 }
 
 
 .server_counters_list  {
+    position: relative;
+    top: -0.3vh;
     width: 17vw;
     white-space:normal;
     font: 1.565vh/1.565vw "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -109,13 +112,17 @@ hr {
     display: inline-block;
     position: relative;
     top: 4vh;
+    left: -2vw;
+    width: 21vw;
     white-space: nowrap;
-    font: 1.565vh/1.565vw "Helvetica Neue", Helvetica, Arial, sans-serif;
-    padding: 0.5vh;
+    font: 1.465vh/1.465vw "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 }
 
 .counters_list_css  {
+    list-style-type: none;
+    border: 1px solid green;
     padding: 1.6%;
+    line-height: 4vh;
     
 }
-
